# ros2-serial-bridge

./: .gitignore  .gitmodules  CMakeLists.txt  package.xml  readme.md  taskfile.sh
bridge_lib/: CMakeLists.txt  iobuffer.cpp  iobuffer.h  queue.h  serial_link.cpp  serial_link.h  serial_settings.cpp  std_format.cpp  std_format.h
fbcontrol/: custom.h  motor_profile.h
launch/: publisher_cmds_launch.py  test_cmds_launch.py
non_ros_messages/: msg_struct.h  msgs.cpp  msgs.h
ros-bridge-node/: CMakeLists.txt  bridge.cpp  bridge_speed_test.cpp  bridge_test_cmds.cpp  package.xml  publisher_test_cmds.cpp  something.todo
src/: bridge.cpp  bridge_speed_test.cpp  bridge_test_cmds.cpp  publisher_test_cmds.cpp
src/bridge_lib/: CMakeLists.txt  SerialPort.cpp  fd_functions.cpp  fd_functions.h  iobuffer.cpp  iobuffer.h  main.cpp  msgs.cpp  msgs.h  queue.h  ros2_bridge.cpp  ros2_bridge.h  serial_link.cpp  serial_link.h  serial_settings.cpp  serial_settings.h
src/fbcontrol/: custom.cpp  custom.h  custom.h.saved  motor_profile.cpp  value_with_direction.h
src/non_ros_messages/: msg_struct.h  msgs.cpp  msgs.h
test/: test_01.cpp
tests_non_ros/: CMakeLists.txt
tests_non_ros/common/: unittest.c  unittest.h
tests_non_ros/test_buffers/: CMakeLists.txt  a.out  test_buffer_main.cpp
tests_non_ros/test_first_guess/: CMakeLists.txt  test_first_guess.cpp
tests_non_ros/test_msgs/: CMakeLists.txt  test_msgs.cpp
tests_non_ros/test_queue/: CMakeLists.txt  test_queue_main.cpp
tests_non_ros/test_with_pico/: CMakeLists.txt  json.txt  test_with_pico.cpp
